tests/lexer/valid/test_whitespace.src
// Тест 15: Пробельные символы
int    x    =    42    ;
int y=42;
int z
=
99
;