tests/lexer/invalid/test_invalid_identifier.src
// Тест 5: Неправильные идентификаторы
int 123abc = 42;
int a@b = 99;
int a#b = 77;